# internship2026

./: .gitignore  LICENSE  README.md  dickson.txt  here.txt  jacque.txt  package.xml  please.txt  setup.py
Amy/: hello.txt
Amy/pub_sub_pack_cpp/: CMakeLists.txt  README.md  package.xml
Amy/pub_sub_pack_cpp/src/: my_publisher.cpp  my_subscriber.cpp
Amy/pub_sub_pack_py/: README.md  package.xml  setup.cfg  setup.py
Amy/pub_sub_pack_py/pub_sub_pack_py/: my_publisher.py  my_subscriber.py
Amy/pub_sub_pack_py/test/: test_flake8.py  test_pep257.py
amy/pub_sub_pack_cpp/: CMakeLists.txt  package.xml
amy/pub_sub_pack_cpp/src/: my_publisher.cpp  my_subscriber.cpp
amy/pub_sub_pack_py/: package.xml  setup.py
amy/pub_sub_pack_py/pub_sub_pack_py/: my_publisher.py  my_subscriber.py
dickson/: README.md  dickson.txt
dickson/publisher and subscriber/python/: py_pub.py
dickson/ros2_ws/src/my_cpp_pkg/: CMakeLists.txt  package.xml
dickson/ros2_ws/src/my_cpp_pkg/src/: cpp_pub.cpp  cpp_sub.cpp
dickson/ros2_ws/src/my_py_pkg/: package.xml  setup.py
dickson/ros2_ws/src/my_py_pkg/my_py_pkg/: my_sub.py  py_pub.py
emmanuelmumo/: CMakeLists.txt  README.md  package.xml
emmanuelmumo/my_robot_package/: package.xml
emmanuelmumo/my_robot_package/my_robot_package/: my_first_node.py
emmanuelmumo/my_robot_package/test/: test_copyright.py
emmanuelmumo/src/: my_first_node.cpp
fred/: clean.txt
fred2/Cpp node/: cppnode.cpp  package.xml
fred2/Python node/: setup.cfg
fred2/cpp_node/: .gitignore  CMakeLists.txt  package.xml
fred2/cpp_node/install/: local_setup.sh  setup.sh
fred2/cpp_node/install/cpp_pubsub/lib/cpp_pubsub/: talker
fred2/cpp_node/install/cpp_pubsub/share/cpp_pubsub/: package.sh
fred2/python_node/: README.md  node.py  package.xml  setup.py
install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
install/my_cpp_package/share/ament_index/resource_index/parent_prefix_path/: my_cpp_package
install/my_cpp_package/share/my_cpp_package/: package.dsv  package.sh
jacque/: README.md  README.md.save
jacque/my_cpp_node/: CMakeLists.txt
jacque/my_cpp_node/src/: my_node.cpp
jacque/my_py_node/: package.xml  setup.py
joan/: joan.txt
joan/dojo_cpp_nodes/: CMakeLists.txt  README.md  package.xml
joan/dojo_cpp_nodes/src/: publisher_node.cpp  subscriber_node.cpp
joan/rover_power_system/: README.md  package.xml  setup.cfg  setup.py
joan/rover_power_system/rover_power_system/: battery_publisher.py  battery_subscriber.py
lenny/: lenny.txt
log/: latest_build
my_robot_pkg/: firstnode.py
nikita/: .gitignore  Readme.md  nikita.txt
nikita/first_cpp_package/: CMakeLists.txt  package.xml
nikita/first_cpp_package/src/: subscriber_node.cpp
nikita/first_python_package/: package.xml  setup.py
nikita/first_python_package/first_python_package/: publisher_node.py
nikita/ros2_ws/src/first_cpp_package/: CMakeLists.txt  package.xml
nikita/ros2_ws/src/first_cpp_package/src/: subscriber_node.cpp
nikita/ros2_ws/src/first_python_package/: package.xml  setup.cfg  setup.py
nikita/ros2_ws/src/first_python_package/first_python_package/: publisher_node.py
nikita/ros2_ws/src/first_python_package/test/: test_copyright.py  test_flake8.py  test_pep257.py
ws_and_nodes/: README.md
ws_and_nodes/src/my_cpp_node/: CMakeLists.txt  package.xml
ws_and_nodes/src/my_cpp_node/src/: publisher_node.cpp  subscriber_node.cpp
ws_and_nodes/src/my_py_node/: setup.cfg  setup.py
ws_and_nodes/src/my_py_node/my_py_node/: my_node.py  publisher.py  subscriber.py
